--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,13 @@ body {
   box-sizing: border-box;
 }
 
+#brxnze{
+  height: 234px;
+  width: 400px;
+}
+
+
+
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
